--- a/src/classes/Option.cls
+++ b/src/classes/Option.cls
@@ -6,6 +6,7 @@ global class Option {
     public String img;
     public String img1;
     public String imgUrl;
+    public String imgUrl1;
     
     global Option(String value, String key){
         this.value = value;
